# actix-web-template

./: .env.sample  Cargo.toml  README.md
src/: lib.rs  main.rs
src/endpoints/example/: config.rs  example_get.rs  mod.rs
src/utils/: config.rs  error.rs  mod.rs  store.rs
